[gd_scene load_steps=26 format=3 uid="uid://cqef13740ypy4"]

[ext_resource type="Theme" uid="uid://fa2uag8fv3w1" path="res://assets/main_theme.tres" id="1_jlbri"]
[ext_resource type="Script" path="res://src/ingame_menu.gd" id="2_julww"]
[ext_resource type="PackedScene" uid="uid://bri3qsfonbejf" path="res://src/morph_button.tscn" id="2_lvuu0"]
[ext_resource type="Texture2D" uid="uid://dyavcqpmqt8hg" path="res://assets/tilium_ore.png" id="4_xl8ar"]
[ext_resource type="Texture2D" uid="uid://mm022p8ajef3" path="res://assets/biomass.png" id="5_w4x7f"]
[ext_resource type="Texture2D" uid="uid://dorjtjodfoild" path="res://assets/plasma_gas.png" id="6_5iqsn"]
[ext_resource type="Texture2D" uid="uid://cnipp0ssg614u" path="res://assets/warp_crystal.png" id="7_bemw7"]
[ext_resource type="Texture2D" uid="uid://c330wkjhjdf1c" path="res://assets/drill_icon.png" id="8_a3wsl"]
[ext_resource type="Texture2D" uid="uid://61jvjvivbox0" path="res://assets/loader_icon.png" id="9_qwean"]
[ext_resource type="Texture2D" uid="uid://bhfjubewpnh8w" path="res://assets/destructor_icon.png" id="10_4ox1n"]
[ext_resource type="Texture2D" uid="uid://dhblcinl4t3y5" path="res://assets/assembler_icon.png" id="11_dhnef"]
[ext_resource type="Texture2D" uid="uid://cyre7yjef8r5b" path="res://assets/reactor.png" id="12_bpxw6"]
[ext_resource type="Texture2D" uid="uid://dth6y667c1ytw" path="res://assets/plasma_reactor_recipe.png" id="12_ojly6"]
[ext_resource type="Texture2D" uid="uid://t8pf31ilwo3a" path="res://assets/oxygen_farm_recipe.png" id="14_b6lgr"]
[ext_resource type="Texture2D" uid="uid://ccpdi7jcga7kp" path="res://assets/oxygen_farm.png" id="15_hgx1l"]
[ext_resource type="Texture2D" uid="uid://btkkr18twq1cc" path="res://assets/fabricator_recipe.png" id="16_co0t8"]
[ext_resource type="Texture2D" uid="uid://7w2gqhwdvwiy" path="res://assets/fabricator.png" id="17_ime67"]
[ext_resource type="Texture2D" uid="uid://dnba7chisdsb4" path="res://assets/refinery_recipe.png" id="18_0a7gr"]
[ext_resource type="Texture2D" uid="uid://bxifh2q2bch03" path="res://assets/refinery.png" id="19_a0bn2"]
[ext_resource type="Texture2D" uid="uid://csuo2uqx8m3j0" path="res://assets/solar_panel_recipe.png" id="20_rx6l6"]
[ext_resource type="Texture2D" uid="uid://cah7ve8uu0uqg" path="res://assets/solar_panel.png" id="21_d3f0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wtpeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cabsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtv3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmgbf"]

[node name="InGameMenu" type="MarginContainer"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jlbri")
theme_override_constants/margin_left = 360
theme_override_constants/margin_top = 156
theme_override_constants/margin_right = 360
theme_override_constants/margin_bottom = 156
script = ExtResource("2_julww")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="Main" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="MissionButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "MISSION"
start_with_focus = true

[node name="ControlsButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "CONTROLS"
start_with_focus = false

[node name="GaugesButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "GAUGES"
start_with_focus = true

[node name="ToolsButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "TOOLS"
start_with_focus = false

[node name="ResourcesButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "RESOURCES"
start_with_focus = false

[node name="StructuresButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "STRUCTURES"
start_with_focus = false

[node name="ExitButton" parent="Main" instance=ExtResource("2_lvuu0")]
layout_mode = 2
text = "EXIT"
start_with_focus = false

[node name="Controls" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Controls"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Controls" type="Label" parent="Controls/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_wtpeq")
text = "(Xbox Controller / Keyboard)
____________________________________
(Left Joystick / arrow keys) -> Move
(Press Left Joystick / Space Bar) -> Cancel placement
(X / q) ->  Hold and let go to place Drill
(Y / w) -> Hold and let go use Loader and place Block
(B / e) -> Use Destructor
(A / r) -> Use Assembler
(L / Tab) -> Toggle Loader resource to the left
(R) -> Toggle Loader resource to the right
(Start / Escape) -> Open Menu"

[node name="Mission" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Mission"]
layout_mode = 2

[node name="Resources" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBox0" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/HBox0"]
layout_mode = 2
texture = ExtResource("4_xl8ar")

[node name="Label" type="Label" parent="Resources/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "TILIUM ORE:
- Core building material used by all structure recipes."

[node name="HBox1" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/HBox1"]
layout_mode = 2
texture = ExtResource("5_w4x7f")

[node name="Label" type="Label" parent="Resources/HBox1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "BIOMASS:
- Used to create and is consumed by Oxygen Farms."

[node name="HBox2" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/HBox2"]
layout_mode = 2
texture = ExtResource("6_5iqsn")

[node name="Label" type="Label" parent="Resources/HBox2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "PLASMA GAS:
- Used to create fuel."

[node name="HBox3" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/HBox3"]
layout_mode = 2
texture = ExtResource("7_bemw7")

[node name="Label" type="Label" parent="Resources/HBox3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "WARP CRYSTAL:
- Used to create Solar Panels and Plasma Reactors."

[node name="Tools" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBox0" type="HBoxContainer" parent="Tools"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Tools/HBox0"]
layout_mode = 2
texture = ExtResource("8_a3wsl")
stretch_mode = 3

[node name="Label" type="Label" parent="Tools/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "DRILL: 
Used to automatically mine resources around it. Drills require Power to run. 
Be carful where drills are placed as they will destroy structures and resources alike."

[node name="HBox1" type="HBoxContainer" parent="Tools"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Tools/HBox1"]
layout_mode = 2
texture = ExtResource("9_qwean")
stretch_mode = 3

[node name="Label" type="Label" parent="Tools/HBox1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "LOADER: 
The loader will place stored resources and a new location but will consume
a small amount of power and 
increase temperature while manuevering."

[node name="HBox2" type="HBoxContainer" parent="Tools"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Tools/HBox2"]
layout_mode = 2
texture = ExtResource("10_4ox1n")
stretch_mode = 3

[node name="Label" type="Label" parent="Tools/HBox2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "DESTRUCTOR: 
The destructor will destroy resources and structures on contact. Consumes fuel and 
increases temperature rapidly while in use."

[node name="HBox3" type="HBoxContainer" parent="Tools"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Tools/HBox3"]
layout_mode = 2
texture = ExtResource("11_dhnef")
stretch_mode = 3

[node name="Label" type="Label" parent="Tools/HBox3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "ASSEMBLER: 
Used to assemble structrues when resources are placed in a valid structure 
recipe. Consumes power while in use."

[node name="Gauges" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Gauges"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cabsq")
text = "POWER: 
- Created by Plasma Reactors and Solar Panels.
- Consumed by Oxygen Farms and drilling. 
- Without Power, Oxygen Farm production and drilling will stop.

TEMPERATURE:
- Core equipment temperature. If this reaches max levels, other gauges are halfed and 
structures are destroyed at random.
- Decreases overtime.
- Slower to decrease for each Plasma Reactor.
- Increases when the destructor is used.
- Increases while drilling.
- Increases while the Loader is used.

FUEL: 
- Plasma reactors run on fuel and will only produce Power while fuel is available. Once you are out of fuel you will
no longer be able to run the destructor. 
- Fuel can be increased from Plasma Gas consumption with a Refinery.

OXYGEN:
- Oxygen is being consumed constantly and when it is empty the game is lost. 
- Can be produced by Oxygen Farms.
"

[node name="Structures" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftButton" type="Button" parent="Structures"]
layout_mode = 2
text = "<"

[node name="Struct0" type="VBoxContainer" parent="Structures"]
layout_mode = 2

[node name="Label" type="Label" parent="Structures/Struct0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtv3k")
text = "OXYGEN FARM"
horizontal_alignment = 1

[node name="HBox0" type="HBoxContainer" parent="Structures/Struct0"]
layout_mode = 2

[node name="Recipe" type="TextureRect" parent="Structures/Struct0/HBox0"]
layout_mode = 2
texture = ExtResource("14_b6lgr")
stretch_mode = 3

[node name="Label" type="Label" parent="Structures/Struct0/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "->"

[node name="Result" type="TextureRect" parent="Structures/Struct0/HBox0"]
layout_mode = 2
texture = ExtResource("15_hgx1l")

[node name="Desc" type="Label" parent="Structures/Struct0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "The Oxygen Farm produces Oxygen while consuming Power and Biomass."
horizontal_alignment = 1

[node name="Struct1" type="VBoxContainer" parent="Structures"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Structures/Struct1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtv3k")
text = "PLASMA REACTOR"
horizontal_alignment = 1

[node name="HBox0" type="HBoxContainer" parent="Structures/Struct1"]
layout_mode = 2

[node name="Recipe" type="TextureRect" parent="Structures/Struct1/HBox0"]
layout_mode = 2
texture = ExtResource("12_ojly6")
stretch_mode = 3

[node name="Label" type="Label" parent="Structures/Struct1/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "->"

[node name="Result" type="TextureRect" parent="Structures/Struct1/HBox0"]
layout_mode = 2
texture = ExtResource("12_bpxw6")

[node name="Desc" type="Label" parent="Structures/Struct1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "The Plasma Reactor generates Power but costs fuel and increases temperature."
horizontal_alignment = 1

[node name="Struct2" type="VBoxContainer" parent="Structures"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Structures/Struct2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtv3k")
text = "FABRICATOR"
horizontal_alignment = 1

[node name="HBox0" type="HBoxContainer" parent="Structures/Struct2"]
layout_mode = 2

[node name="Recipe" type="TextureRect" parent="Structures/Struct2/HBox0"]
layout_mode = 2
texture = ExtResource("16_co0t8")
stretch_mode = 3

[node name="Label" type="Label" parent="Structures/Struct2/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "->"

[node name="Result" type="TextureRect" parent="Structures/Struct2/HBox0"]
layout_mode = 2
texture = ExtResource("17_ime67")

[node name="Desc" type="Label" parent="Structures/Struct2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "The Fabricator increases the maximum amount of Drills by one."
horizontal_alignment = 1

[node name="Struct3" type="VBoxContainer" parent="Structures"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Structures/Struct3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtv3k")
text = "REFINERY"
horizontal_alignment = 1

[node name="HBox0" type="HBoxContainer" parent="Structures/Struct3"]
layout_mode = 2

[node name="Recipe" type="TextureRect" parent="Structures/Struct3/HBox0"]
layout_mode = 2
texture = ExtResource("18_0a7gr")
stretch_mode = 3

[node name="Label" type="Label" parent="Structures/Struct3/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "->"

[node name="Result" type="TextureRect" parent="Structures/Struct3/HBox0"]
layout_mode = 2
texture = ExtResource("19_a0bn2")

[node name="Desc" type="Label" parent="Structures/Struct3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "The Refinery produces Fuel and consumes Plasma Gas."
horizontal_alignment = 1

[node name="Struct4" type="VBoxContainer" parent="Structures"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Structures/Struct4"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtv3k")
text = "SOLAR PANEL"
horizontal_alignment = 1

[node name="HBox0" type="HBoxContainer" parent="Structures/Struct4"]
layout_mode = 2

[node name="Recipe" type="TextureRect" parent="Structures/Struct4/HBox0"]
layout_mode = 2
texture = ExtResource("20_rx6l6")
stretch_mode = 3

[node name="Label" type="Label" parent="Structures/Struct4/HBox0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "->"

[node name="Result" type="TextureRect" parent="Structures/Struct4/HBox0"]
layout_mode = 2
texture = ExtResource("21_d3f0t")

[node name="Desc" type="Label" parent="Structures/Struct4"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmgbf")
text = "The Solar Panel produces a small amount of Power."
horizontal_alignment = 1

[node name="RightButton" type="Button" parent="Structures"]
layout_mode = 2
text = ">"

[connection signal="button_down" from="Main/MissionButton" to="." method="_on_mission_button_button_down"]
[connection signal="button_down" from="Main/ControlsButton" to="." method="_on_controls_button_button_down"]
[connection signal="button_down" from="Main/GaugesButton" to="." method="_on_gauges_button_button_down"]
[connection signal="button_down" from="Main/ToolsButton" to="." method="_on_tools_button_button_down"]
[connection signal="button_down" from="Main/ResourcesButton" to="." method="_on_resources_button_button_down"]
[connection signal="button_down" from="Main/StructuresButton" to="." method="_on_structures_button_down"]
[connection signal="button_down" from="Main/ExitButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="Structures/LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="button_down" from="Structures/RightButton" to="." method="_on_right_button_button_down"]
